syntax = "proto3";

package ipfsv2;

message Edit {
  bytes id = 1;
  string name = 2;
  repeated Op ops = 3;
  repeated bytes authors = 4;
  optional bytes language = 5;
}

message ImportEdit {
  bytes id = 1;
  string name = 2;
  repeated Op ops = 3;
  repeated bytes authors = 4;
  bytes created_by = 5;
  string created_at = 6;
  bytes block_hash = 7;
  string block_number = 8;
  bytes transaction_hash = 9;
}

message Import {
  // these strings are IPFS cids representing the import edit message
  repeated string edits = 1;
}

message IpfsFile {
  string version = 1;

  oneof payload {
    Edit add_edit = 2;
    Import import_space = 3;
    bytes archive_space = 4;
  }
}

message Op {
  oneof payload {
    Entity             create_entity   = 1;
    Entity             update_entity   = 2;
    bytes              delete_entity = 3;
    Relation           create_relation = 4;
    RelationUpdate     update_relation = 5;
    bytes              delete_relation = 6;
    UnsetProperties    unset_properties = 7;
    UnsetRelation      unset_relation = 8;
  }
}

message UnsetProperties {
  bytes id = 1;
  repeated bytes properties = 2;
}

message Relation {
  bytes id = 1;
  bytes type = 2;
  bytes from_entity = 3;
  optional bytes from_space = 4;
  optional bytes from_property = 5;
  optional bytes from_version = 6;
  bytes to_entity = 7;
  optional bytes to_space = 8;
  optional bytes to_property = 9;
  optional bytes to_version = 10;
  bytes entity = 11;
  optional string position = 12;
  optional bool verified = 13;
}

message RelationUpdate {
  bytes id = 1;
  optional bytes from_space = 2;
  optional bytes from_property = 3;
  optional bytes from_version = 4;
  optional bytes to_space = 5;
  optional bytes to_property = 6;
  optional bytes to_version = 7;
  optional string position = 8;
  optional bool verified = 9;
}

message UnsetRelation {
  bytes id = 1;
  optional bool from_space = 2;
  optional bool from_version = 3;
  optional bool to_space = 4;
  optional bool to_version = 5;
  optional bool position = 6;
  optional bool verified = 7;
}

message Entity {
  bytes id = 1;
  repeated Value values = 2;
}

message Value {
  bytes property_id = 1;
  string value = 2;
}